--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
-
 * {
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -21,6 +25,9 @@
 .header-container-user {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin-right: 10px;
+    margin-top: 10px;
 }
 
 .header-box {
@@ -30,5 +37,47 @@
 }
 
 .header h1 {
+    color: white;
+}
+
+.web-icon {
+    width: 55px;
+    height: 55px;
+    margin-left: 10px;
+    margin-top: 12px;
+}
+.header-icon {
+    width: 50px;
+    height: 50px;
+}
+
+/* homepage css */
+.posts {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.content {
+    background-color: #FFD987;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    gap: 3.5rem;
+}
+
+.active-post {
+    background-color: white;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.card {
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: white;
+}
+.selected {
+    background-color: #87ADFF;
     color: white;
 }
