Make changes to the content section

--- a/src/home.css
+++ b/src/home.css
@@ -15,7 +15,7 @@ body {
 
 .content {
     background-color: #FFD987;
-    padding: 2rem;
+    padding: 2.5rem;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     gap: 3.5rem;
@@ -25,14 +25,56 @@ body {
     background-color: white;
     border-radius: 1rem;
     padding: 1rem;
+    border: 0.2rem solid #FFAE00;
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
     border-radius: 1rem;
     padding: 1rem;
     background-color: white;
+    border: 0.15rem solid #FFAE00;
 }
+
+.card li {
+    margin-left: 1.4rem;
+}
+
 .selected {
     background-color: #87ADFF;
+    color: white;
+    border-color: black;
+}
+
+input {
+    border-radius: 1.4rem;
+    border-color: #FFD987;
+    min-height: 1.7rem;
+    font-size: 1.2rem;
+    padding: 0.3rem 1rem;
+}
+
+.search {
+    background-color: #FFD987;
+    padding: 2.5rem;
+    padding-bottom: 0rem;
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.search button {
+    background-color: white;
+    border: 0.2rem solid #FFAE00;
+    color: #FFAE00;
+    border-radius: 0.9rem;
+    font-size: 1.2rem;
+    padding: 0.4rem 1rem;
+}
+
+.search button:hover {
+    background-color: #FFAE00;
     color: white;
 }
