--- a/src/home.css
+++ b/src/home.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: scroll;
 }
 
 .content {
@@ -19,6 +20,7 @@ body {
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     gap: 3.5rem;
+    height: 50rem;
 }
 
 .active-post {
@@ -29,15 +31,21 @@ body {
     border-radius: 1rem;
     padding: 1rem;
     border: 0.2rem solid #FFAE00;
+    font-size: 1.2rem;
+}
+
+.active-post li {
+    margin-left: 1.4rem;
 }
 
 .card {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     gap: 3rem;
     border-radius: 1rem;
     padding: 1rem;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 90%);
     border: 0.15rem solid #FFAE00;
 }
 
@@ -83,6 +91,9 @@ input {
 }
 
 .hexagon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 15rem;
     aspect-ratio: 1/cos(30deg); 
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0% 50%);
@@ -90,3 +101,27 @@ input {
     align-self: center;
 }
   
+.hexagon button {
+    background-color: white;
+    border: 0.2rem solid #FFAE00;
+    color: #FFAE00;
+    border-radius: 0.9rem;
+    font-size: 1.2rem;
+    padding: 0.4rem 1rem;
+}
+
+.hexagon button:hover {
+    background-color: #FFAE00;
+    color: white;
+}
+#triangle-right {
+    position: absolute;
+    top: 70%;
+    left: -20%;
+    width: 40rem;
+    height: 40rem;
+    z-index: 0;
+    background-color: #FFAE00;
+    rotate: 43deg;
+    overflow: hidden;
+}
