--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,6 @@ body {
     flex-direction: column;
     gap: 1rem;
     overflow-y: scroll;
-    overflow-y: scroll;
 }
 
 .content {
@@ -88,7 +87,6 @@ body {
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     gap: 3.5rem;
-    height: 50rem;
     height: 50rem;
 }
 
@@ -105,22 +103,15 @@ body {
 
 .active-post li {
     margin-left: 1.4rem;
-    font-size: 1.2rem;
-}
-
-.active-post li {
-    margin-left: 1.4rem;
 }
 
 .card {
-    z-index: 1;
     z-index: 1;
     display: flex;
     flex-direction: column;
     gap: 3rem;
     border-radius: 1rem;
     padding: 1rem;
-    background-color: rgba(255, 255, 255, 90%);
     background-color: rgba(255, 255, 255, 90%);
     border: 0.15rem solid #FFAE00;
 }
@@ -170,9 +161,6 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 15rem;
     aspect-ratio: 1/cos(30deg); 
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0% 50%);
@@ -204,36 +192,11 @@ input {
     rotate: 43deg;
     overflow: hidden;
 }
-  
-.hexagon button {
-    background-color: white;
-    border: 0.2rem solid #FFAE00;
-    color: #FFAE00;
-    border-radius: 0.9rem;
-    font-size: 1.2rem;
-    padding: 0.4rem 1rem;
-}
-
-.hexagon button:hover {
-    background-color: #FFAE00;
-    color: white;
-}
-#triangle-right {
-    position: absolute;
-    top: 70%;
-    left: -20%;
-    width: 40rem;
-    height: 40rem;
-    z-index: 0;
-    background-color: #FFAE00;
-    rotate: 43deg;
-    overflow: hidden;
-}
 
 /* create listing page */
 .listing-container {
     background-color: #FFD987;
-    height: 100vh;
+    height: 110vh;
 
     display: flex;
     flex-direction: column;
@@ -271,12 +234,21 @@ input {
 
 .listing-preivew-bounds {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    background-color: rgba(135, 173, 255, 85%);
 }
 
-.listing-preivew-left {
-    display: flex;
-    flex-direction: row;
+button {
+    background-color: white;
+    border: 0.2rem solid #FFAE00;
+    color: #FFAE00;
+    border-radius: 0.9rem;
+    font-size: 1.2rem;
+    padding: 0.4rem 1rem;
+}
+button:hover {
+    background-color: #FFAE00;
+    color: white;
 }
 
 textarea {
@@ -286,6 +258,5 @@ textarea {
     min-height: 1.7rem;
     font-size: 1.2rem;
     padding: 0.3rem 1rem;
-
 }
 
